gccida/c0/status_warning
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/status_warning/src/c-format.c:1477:1: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
diagnostic_context_0 dc; // [rsp+178h] [rbp-188h] BYREF 
^~~~~~~~~~~~~~~~~~~~
diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/status_warning/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/status_warning/src/c-format.c:1490:51: error: expected expression
set_diagnostic_context( &dc, msgida, ( va_list_0 *)ap, input_filename, lineno, 1); 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/status_warning/src/c-format.c:1490:40: error: use of undeclared identifier 'va_list_0'
set_diagnostic_context( &dc, msgida, ( va_list_0 *)ap, input_filename, lineno, 1); 
                                       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/status_warning/src/obj/c-format.o] Error 1
